# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  ot-harjoitustyo-035eb11cf15a.json  pyproject.toml  tasks.py
dokumentaatio/: Käyttöohje  Käyttöohje.md  Työnaikakirjanpito.txt  arkitektuuri.md  testaus.md  vaatimusmaarittely.md
laskarit/viikko1/: Työnaikakirjanpito.txt  gitlog.txt  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save  maksukortti_test.py.save.1
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: Board.py  board.py  minefield.py  sheets.py  square.py  ui.py
src/tests/: Board_test.py  board_test.py  minefield_test.py  square_test.py
